question shows up now

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -38,6 +38,13 @@ p[style ="font-size:18"]{
   font-size: 30;
 }
 
+p[style ="text-align:center"]{
+  position: relative;
+  top: 140px;
+  left: -240px;
+  font-size: 30;
+}
+
 canvas{
   position: relative;
   top: 75px;
