--- a/flaskr/templates/review/responses.html
+++ b/flaskr/templates/review/responses.html
@@ -4,7 +4,7 @@
 <div class="container">
   <h1>{% block title %}
         <blockquote class="blockquote">
-            <p class="mb-0" > {{ question['content']}}</p>
+            <p class="mb-0" > {{ question}}</p>
         </blockquote>{% endblock %}
     </h1>
 </div>
@@ -20,5 +20,3 @@
   </blockquote>
 {% endfor %}
 {% endblock %}
-
- 
