Fixed sizing for phones

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -72,6 +72,30 @@ button{
   color:#565554;
   border-color: #565554;
 }
+
+/* Improve Phone Visualization */
+@media screen and (max-width: 630px) {
+  label{
+    display: inline-block;
+    text-align: left;
+    margin-left:10%;
+  }
+  .label:before {
+    content:" ,";
+  }
+  .label:after {
+    content:" ,";
+  }
+  input{
+    display: inline-block;
+  }
+  .input:before {
+    content:" ,";
+  }
+  .input:after {
+    content:" ,";
+  }
+}
 </style>
 
 
