--- a/flaskr/templates/review/CreateMultipleChoice.html
+++ b/flaskr/templates/review/CreateMultipleChoice.html
@@ -4,12 +4,12 @@
 <div class="container">
   <form method="post">
     <div class="form-group">
-    <label for="exampleFormControlTextarea1" style = "margin-left:0%">Your Question:</label>
+    <label for="exampleFormControlTextarea1" style = "margin-left:0%"><h4>Your Question:</h4></label>
     <textarea class="form-control" rows="3" name="question-text">
     </textarea>
 
 
-      <p style="margin-left:0%; margin-top:40px; text-align:left">Add options:</p>
+      <p style="margin-left:0%; margin-top:40px; text-align:left"><h4>Add Options:</h4></p>
 
 
     <div class="input-group mb-2">
