--- a/flaskr/templates/review/home.html
+++ b/flaskr/templates/review/home.html
@@ -4,9 +4,9 @@
   <h1>{% block title %}Welcome to NimbleKnow{% endblock %}</h1>
 {% endblock %}
 {% block content %}
-    <p>To get started, please select an option from the task bar.</p>
+    <p class = 'customP'>To get started, please select an option from the task bar.</p>
   <blockquote class="blockquote">
-    <p class="mb-0">"This app is awesome! The prototype blows my mind."</p>
+    <p class="mb-0 customP">"This app is awesome! The prototype blows my mind."</p>
     <footer class="blockquote-footer">From a user, probably</footer>
 </blockquote>
 <div role = "group" style="text-align:center">
